# mkv_compressor

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  main.py  pyproject.toml  requirements.txt  setup.py
docs/: api_reference.md  user_guide.md
scripts/: build.bat  build.sh
src/mkv_compressor/: __init__.py  cli.py
src/mkv_compressor/core/: __init__.py  compressor.py
src/mkv_compressor/gui/: __init__.py  main_window.py
src/mkv_compressor/utils/: __init__.py  assets.py  config.py  helpers.py  logger.py
tests/: __init__.py  test_core.py  test_utils.py
